[tool.poetry]
name = "finalproject_bondarenko_ds"
version = "0.1.0"
description = "ValutaTrade Hub — CLI-платформа для симуляции торговли валютами"
authors = ["Anton Bondarenko <anton@example.com>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
prettytable = ">=3.9.0"
requests = ">=2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.0"

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
